tests/exprs/tstmtexp.nim
discard """
  errormsg: "expression '5' is of type 'int literal(5)' and has to be used (or discarded)"
  file: "tstmtexp.nim"
  line: 8
"""
# Test 3

1+4
